--- a/Proyecto_Optimizacion V1.ipynb
+++ b/Proyecto_Optimizacion V1.ipynb
@@ -18,6 +18,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66c9aaec",
+   "metadata": {},
+   "source": [
+    "# Proyecto de Optimización Numérica I\n",
+    "\n",
+    "- Samuel Elí Méndez Sánchez 196659\n",
+    "- Santiago Casanova Díaz 189756\n",
+    "- Eduardo Mateo Guajardo Rodriguez 166273\n",
+    "- Sebastian Ibarra Del Corral 193992\n",
+    "- Sandra Reyes Benavides 179149"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "780588e8",
@@ -278,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3cf9a5e4",
+   "id": "58f2b1f5",
    "metadata": {
     "scrolled": true
    },
@@ -1300,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d3efb6e9",
+   "id": "c244ca58",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "b9667f08",
+   "id": "ef1ee5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "f3e87002",
+   "id": "f2edbe66",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b1ef84b5",
+   "id": "bdef01f9",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "aee7cb16",
+   "id": "c7d21fd6",
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e60a89",
+   "id": "9910939e",
    "metadata": {},
    "outputs": [],
    "source": []
