--- a/Proyecto_Optimizacion V1.ipynb
+++ b/Proyecto_Optimizacion V1.ipynb
@@ -288,8 +288,26 @@
    "id": "398ea874",
    "metadata": {},
    "source": [
-    "# Para el caso de Setosa con Virginica \n",
     "### A vs B\n",
+    "\n",
+    "Minimizar $\\frac{1}{2} w^T w$ sujeto a:\n",
+    "\n",
+    "\n",
+    "\\begin{cases}\n",
+    "w^T x_i + \\beta \\leq -1, & \\text{para } i = 1, 2, \\ldots, s \\\\\n",
+    "w^T x_i + \\beta \\geq 1, & \\text{para } i = s + 1, s + 2, \\ldots, s + r\n",
+    "\\end{cases}\n",
+    "\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "$w$ es un vector de variables de optimización.\n",
+    "$\\beta$ es una constante. \n",
+    "$x_i$ son vectores de datos.\n",
+    "$s$ y $r$ son números enteros.\n",
+    "\n",
+    "Vemos que para obtener la matriz F solamente hacemos un par de operaciones algebraicas:\n",
+    "\n",
     "La matriz F debe quedar de la forma:\n",
     "\n",
     "\\begin{bmatrix}\n",
@@ -300,7 +318,7 @@
     "\\begin{bmatrix}\n",
     "[-A_{mat}] & [Vec_{m1}] \\\\\n",
     "[B] & [Vec_1] \\\\\n",
-    "\\end{bmatrix}\n"
+    "\\end{bmatrix}"
    ]
   },
   {
